fixing squished background images

--- a/sites/all/themes/calacademy_zen/css/calacademy/backgrounds.css
+++ b/sites/all/themes/calacademy_zen/css/calacademy/backgrounds.css
@@ -18,10 +18,10 @@ main / body backgrounds
 @media only screen and (min-width: 0) {
   /* line 754, ../../sass/calacademy/_mixins.scss */
   .wf-active .bg-fish.loaded {
-    -moz-background-size: 35% 35%;
-    -o-background-size: 35% 35%;
-    -webkit-background-size: 35% 35%;
-    background-size: 35% 35%;
+    -moz-background-size: 35%, 35%;
+    -o-background-size: 35%, 35%;
+    -webkit-background-size: 35%, 35%;
+    background-size: 35%, 35%;
   }
 }
 @media only screen and (min-width: 320px) and (max-width: 767px) {
@@ -45,10 +45,10 @@ main / body backgrounds
 @media only screen and (min-width: 0) {
   /* line 754, ../../sass/calacademy/_mixins.scss */
   .wf-active .bg-frog.loaded {
-    -moz-background-size: 50% 50%;
-    -o-background-size: 50% 50%;
-    -webkit-background-size: 50% 50%;
-    background-size: 50% 50%;
+    -moz-background-size: 50%, 50%;
+    -o-background-size: 50%, 50%;
+    -webkit-background-size: 50%, 50%;
+    background-size: 50%, 50%;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1000px) {
@@ -78,10 +78,10 @@ main / body backgrounds
 @media only screen and (min-width: 0) {
   /* line 754, ../../sass/calacademy/_mixins.scss */
   .wf-active .bg-fancy-fish.loaded {
-    -moz-background-size: 45% 45%;
-    -o-background-size: 45% 45%;
-    -webkit-background-size: 45% 45%;
-    background-size: 45% 45%;
+    -moz-background-size: 45%, 45%;
+    -o-background-size: 45%, 45%;
+    -webkit-background-size: 45%, 45%;
+    background-size: 45%, 45%;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1000px) {
